# database-backup-agent

./: .gitignore  Cargo.toml  config.example.toml  rust-toolchain.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/application/: backup_service.rs  mod.rs  retention.rs
crates/core/src/domain/: backup_job.rs  backup_result.rs  config.rs  error.rs  mod.rs
crates/core/src/infrastructure/: compression.rs  config_loader.rs  mod.rs  mssql.rs  telegram.rs
crates/core/src/infrastructure/storage/: local.rs  mod.rs  s3.rs
crates/core/src/ipc/: messages.rs  mod.rs  transport.rs
crates/core/src/ports/: compression.rs  database.rs  mod.rs  notifier.rs  storage.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  ipc_client.rs  main.rs
crates/gui/src/views/: dashboard.rs  history.rs  logs.rs  mod.rs  settings.rs
crates/service/: Cargo.toml
crates/service/src/: ipc_server.rs  main.rs  scheduler.rs  service_handler.rs
installer/: README.md  setup.iss
