[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gui",
    "crates/service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# ============================================================================
# Workspace Dependencies
# Centralized version management. Each crate references these with:
#   dep_name = { workspace = true }
# We add more deps here as we build each step.
# ============================================================================

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"


# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
cron = "0.12"
eframe = { version = "0.29.0", default-features = false, features = ["glow", "default_fonts"] }



# SQL Server
tiberius = { version = "0.12", features = ["chrono"] }

# AWS S3
aws-config = { version = "=1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "=1.17.0"
aws-sdk-sso = "=1.17.0"
aws-sdk-ssooidc = "=1.17.0"
aws-sdk-sts = "=1.17.0"
