[package]
name = "backup-agent-core"
description = "Core business logic for Backup Agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tiberius = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
reqwest = { workspace = true }
bincode = { workspace = true }

[features]
default = []
integrated-auth-gssapi = ["tiberius/integrated-auth-gssapi"]
# S3 support (and its "s3" feature) is dropped on this branch: aws-sdk-s3's
# transitive deps (aws-sigv4 -> sha2/cpufeatures, plus a chunk of the
# reqwest HTTP/3 stack) require Cargo 1.85+ (edition2024), which is
# incompatible with the Rust 1.77.2 toolchain this branch is pinned to for
# Windows Server 2012 R2 support. Local storage remains fully supported.
