[package]
name = "backup-agent-service"
description = "Windows Service daemon for Backup Agent"
version.workspace = true
edition.workspace = true

[dependencies]
backup-agent-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }


[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

